--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,8 +2,8 @@ FROM node:20-alpine
 
 WORKDIR /opt/app
 COPY package*.json .
-RUN npm install
+RUN npm ci
 COPY . .
 EXPOSE 3000
 
-CMD ["npm", "run","dev"]
+CMD ["npm", "run", "dev", "--", "--host"]
