--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -7,9 +7,9 @@ services:
    container_name: frontend-app
    restart: always
    ports:
-     - 8080:8000
+     - 8080:5173
    volumes:
-     - ./frontend:/opt/app
-     - /app/node_modules
+     - ../frontend:/opt/app
+     - /opt/app/node_modules
    environment:
      - VITE_APP_BACKEND_ADDRESS=http://localhost/api
