--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@fortawesome/fontawesome-free": "^6.6.0",
+        "@headlessui/react": "^2.2.0",
         "@mui/icons-material": "^6.1.6",
         "@mui/material": "^6.1.6",
         "@reduxjs/toolkit": "^2.3.0",
@@ -23,7 +24,8 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
-        "react-router-dom": "^6.27.0"
+        "react-router-dom": "^6.27.0",
+        "react-toastify": "^10.0.6"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
